src/main/default/objects/CVMA_Career_Resource__mdt/CVMA_Career_Resource__mdt.object-meta.xml
<CustomObject>
    <label>CVMA Career Resource</label>
    <pluralLabel>CVMA Career Resources</pluralLabel>
</CustomObject>