src/main/default/objects/CVMA_Career_Resource__mdt/fields/CEB_Approved__c.field-meta.xml
<CustomField>
    <fullName>CEB_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEB Approved</label>
    <type>Checkbox</type>
</CustomField>