src/main/default/objects/CVMA_Career_Resource__mdt/fields/Certification_Available__c.field-meta.xml
<CustomField>
    <fullName>Certification_Available__c</fullName>
    <label>Certification Available</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>