src/main/default/objects/CVMA_Career_Resource__mdt/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <length>100</length>
    <type>Text</type>
</CustomField>