src/main/default/objects/CVMA_Career_Resource__mdt/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <label>Resource Name</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>