src/main/default/objects/CVMA_Career_Resource__mdt/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Text</type>
    <length>255</length>
</CustomField>